--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main>
     <!-- プロローグ -->
     <section id="prologue">
-      <h2>―プロローグ：虚ろいても―</h2>
+      <h2>――プロローグ：虚ろいても――</h2>
       <!-- <img src="images/prologue.png" alt="プロローグ画像" class="chapter-image"> -->
       <p>
         どれほどの月日が流れたのだろう。<br>任務の全容が見えぬまま指令に従い、“青の時代（とき）”で、その時代（とき）の人として生きてきた。</p>
@@ -423,4 +423,5 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 
 
 </body>
+
 </html>
