--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 「い、いや、そうじゃなくて。人が何を考えてるのか、理解するのが苦手なの」<br>
 「やっぱり宇宙人？」<br><br>
 まずいなぁ…流れを変えないと。<br><br>
-「脳が、脳がそうかも」<br>
+「かっ、考えが、ちょっとそうかも」<br>
 <br>
       </p>
     </div>
@@ -425,3 +425,4 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
