--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <h2>――第二章：無音の約束――</h2>
       <div class="chapter-content">
         <div class="image-and-poem">
-        <img src="images/chapter2.jpg" alt="第2章の画像">
+        <img src="images/new-chapter2.jpg" alt="第2章の画像">
         <p class="poem">
         水の跡が<br>
         まっすぐ伸びていた<br>
@@ -425,5 +425,6 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
