--- a/index.html
+++ b/index.html
@@ -348,10 +348,8 @@
      「梅咲く公園でお別れ…か、これにて第一幕終了。第二幕は… ある朝、花園さんから電話がかかってくる。これでお願いします」<br>
      「わかった。君のそばに彼女がいても、気にしないよ」<br>
      「しまった。それはマズイかも」<br><br>
-     ふたりの笑い声が、空回りした。<br>
-     外は、すっかり日が暮れている。<br>
-     南海君が、カフェの扉を開けてくれた。<br>
-     春の夜の、ひんやりとした空気が心地よくもあり、さびしくもあった。<br><br><br>
+     ふたりの笑い声が空回りした。<br>
+　　　そこには、空間に吸い込まれるような静かな虚無があった。<br><br><br>
 
      ー 完 ー
       </p>
@@ -425,6 +423,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
