--- a/index.html
+++ b/index.html
@@ -348,10 +348,8 @@
      「梅咲く公園でお別れ…か、これにて第一幕終了。第二幕は… ある朝、花園さんから電話がかかってくる。これでお願いします」<br>
      「わかった。君のそばに彼女がいても、気にしないよ」<br>
      「しまった。それはマズイかも」<br><br>
-     ふたりの笑い声が空回りした。<br>
-　　　そこには、空間に吸い込まれるような静かな虚無があった。<br><br><br>
-
-     ー 完 ー
+     ふたりの笑い声が空回りした。<br>そこには、空間に吸い込まれるような静かな虚無があった。<br><br><br>
+          
       </p>
     </div>
     </div>
@@ -423,6 +421,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
