--- a/index.html
+++ b/index.html
@@ -365,6 +365,12 @@
 </div>
   </main>
 
+  <!-- 小説の最後の段落が終わったあと -->
+<p style="text-align:center; font-size:0.9rem; color:#666; margin-top:2rem;">
+  『好きだよ』―ある短編小説のためのイメージソング―<br>
+  <a href="https://www.youtube.com/watch?v=Q9W_rx4-m2g&t=1s" target="_blank" style="color:#4b0082; text-decoration:none;">YouTubeで聴く</a>
+</p>
+
   <footer>
     <p>© 2025 Yoiko no “Yo”</p>
   </footer>
@@ -421,6 +427,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
