--- a/index.html
+++ b/index.html
@@ -371,6 +371,20 @@
   <a href="https://www.youtube.com/watch?v=Q9W_rx4-m2g&t=1s" target="_blank" style="color:#4b0082; text-decoration:none;">YouTubeで聴く</a>
 </p>
 
+  <div class="qr-section">
+  <p>スマホでサイトや曲をすぐにチェックできます↓</p>
+  <div class="qr-grid">
+    <div class="qr-item">
+      <img src="images/story-qr.png" alt="水の跡サイトQRコード">
+      <p>『水の跡』サイト</p>
+    </div>
+    <div class="qr-item">
+      <img src="images/song-qr.png" alt="好きだよQRコード">
+      <p>イメージソング『好きだよ』</p>
+    </div>
+  </div>
+</div>
+
   <footer>
     <p>© 2025 Yoiko no “Yo”</p>
   </footer>
@@ -427,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
