--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
   <!-- 小説の最後の段落が終わったあと -->
 <p style="text-align:center; font-size:0.9rem; color:#666; margin-top:2rem;">
-  ―このストーリーのイメージソング『好きだよ』―<br>
+  『好きだよ』―この物語のためのイメージソング―<br>
   <a href="https://www.youtube.com/watch?v=Q9W_rx4-m2g&t=1s" target="_blank" style="color:#4b0082; text-decoration:none;">YouTubeで聴く</a>
 </p>
 
@@ -441,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
