--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
      「愛？」<br>
      「愛って、なに？」<br>
      「うわっ、またですか？」<br>
-     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね――<br>『愛は永遠に消えることはないんだ。ただ育っていくだけなんだよ』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
+     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね――<br>『愛は永遠に消えることはないんだ。
+ただ、新しいステージへと進化していくだけなんだよ。』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
      「なんか、宇宙人っていうより、禅問答みたいになってきましたね。フツーになれませんか？」<br>
      「フツーじゃないのがいいって言ってなかったっけ…」<br>
      「言ったけど、今はフツーがいいと思いました」<br>
@@ -441,6 +442,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
