Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
      「どうしたんですか？ 宇宙人が幽霊を見たような顔してますよ」<br>
      「えっ、失礼ねぇ。これは生まれつきの顔なの。ごめん、今思い出した」<br>
      「いいですよ。あのあと何度か話しかけようとしたけど、花園さんがボクを視界に入れてくれないから、後ろから声かけちゃえって。それでコーヒーに誘ったらすぐにOKしてくれたから、覚えていてくれたのかと思ったんだけど…」<br>
-     「ホントにゴメン！ わたし、おっちょこちょいで、いつも周りが見えてないの。」<br><br>
+     「ホントにゴメン！ わたし不器用なの。それで…なんか周りが見えてないみたいで…」<br><br>
      波動の共鳴が大きくなる前に、ここを離れなければ…<br><br>
      「了解。で、差し上げた権利のことなんですが、今はないとして、必ず行使してくださいね」<br>
      「あのね、エックハルト・トールって人が言ってたよ。『明日を見た人がいたら、記念碑が建つ』って。<br>――今しか存在しない。明日も明後日も、その時になったら、それは“今”だって。<br>だから、“今はしない”っていうのは、そういうこと」<br>
@@ -442,6 +442,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
