--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>
         どれほどの月日が流れたのだろう。<br>任務の全容が見えぬまま指令に従い、“青の時代（とき）”で、その時代（とき）の人として生きてきた。</p>
         <p>いったい、私の任務は何だったのか。<br>戦場で友を失い号泣した。仲間と笑い転げたときもあった。<br>孤独にさいなまれた日々があり、命の危険を感じたこともある。<br>だが、今となっては、すべてが曖昧な残像でしかない。</p>
-        <p>もう、どうでもいい。</p><p>これから帰る“紅の時代(とき)”、遠くに霞む“青の時代”。<br>それらは本当に実在しているのか、<br>わたしは本当に、生きているのか、<br>それさえも、今は確かではないのだから。</p><p>たぶん、突然届いた「任務終了」の通知が、一瞬にしてわたしのすべてを閉じてしまったのだ。</p><p>けれど不思議なことに、<br>何気ない一日のひとコマが、鮮やかによみがえることがある。</p><p>閉じられた空間からはみ出した記憶…<br>あの“綿毛の子”との会話もそのひとつだ。
+        <p>もう、どうでもいい。</p><p>これから帰る“紅の時代(とき)”、遠くに霞む“青の時代”。<br>それらは本当に実在しているのか、<br>わたしは本当に生きているのか、<br>それさえも、今は確かではないのだから。</p><p>たぶん、突然届いた「任務終了」の通知が、一瞬にしてわたしのすべてを閉じてしまったのだ。</p><p>けれど不思議なことに、<br>何気ない一日のひとコマが、鮮やかによみがえることがある。</p><p>閉じられた空間からはみ出した記憶…<br>あの“綿毛の子”との会話もそのひとつだ。
       </p>
     </section>
 
@@ -442,6 +442,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
