--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 思わず、のけぞってしまった。<br><br>
 「それって、オレの顔、見たくないって聞こえますよ」<br><br>
 この人は、どうしてこんなふうに振る舞えるんだろう。<br>
-――でも、不思議と、居心地は悪くない。<br>
+でも、不思議と、居心地は悪くない。<br>
 そう、まるで昔からの友人のように。<br>
 学部もクラブも違って、部室が隣なだけ。 会えば挨拶はするけれど、話したことなんて、ほとんどなかった。<br>
 それなのに、彼はわたしの空間に、抵抗なく溶け込んでくる。<br>
@@ -107,15 +107,15 @@
 「なんか、花の香りがしませんか？」<br><br>
 突然、南海君が言った。<br>
 私は少し驚いて、彼の横顔を見た。<br>
-冗談かと思ったけれど――真面目な顔をしている。<br><br>
+冗談かと思ったけれど、真面目な顔をしている。<br><br>
 「花？」<br>
 「たぶん… なんとなくですけど、変ですよね」<br>
 「ううん、変じゃないよ。香りがするって思えるの、いいね」<br><br>
 普段なら、こんな感覚的なやりとりに、真面目に返すことなんて、まずない。<br>
 だけど、今の私は、それを否定したくなかった。<br>
 風が吹き、カップの湯気がすっと横に流れる。<br>
-空気がゆるやかに光をまとい、綿毛が舞っているようだった。<br>
-――これは、ただの偶然だろうか。<br>
+空気がゆるやかに光をまとい、綿毛が舞っているようだった。<br><br>
+これは、ただの偶然だろうか。<br>
 この香りに、南海君は気づいている…？<br>
 いや、そんなはずはない。<br>
 誰かの香水が、たまたま彼のもとに漂ってきただけだ。<br>
@@ -223,7 +223,7 @@
      「イヤじゃない？ カタツムリが通ったあとにキスするのって」<br>
      「やめてくださいよ〜！ ひどいなぁ」<br><br>
      南海君の、ちょっとひねくれた顔がかわいくて、つい笑ってしまった。<br>
-     だけど――これは演技？<br>
+     だけど… これは演技？<br>
      それとも、“標（しるし）”は見えないのか…。<br><br>
      「だから、今はしない」<br>
      「そっか、今は周りに人がいるからできないってことですね。素直じゃないなぁ」<br><br>
@@ -245,7 +245,7 @@
      「ホントにゴメン！ わたし不器用なの。それで…なんか周りが見えてないみたいで…」<br><br>
      波動の共鳴が大きくなる前に、ここを離れなければ…<br><br>
      「了解。で、差し上げた権利のことなんですが、今はないとして、必ず行使してくださいね」<br>
-     「あのね、エックハルト・トールって人が言ってたよ。『明日を見た人がいたら、記念碑が建つ』って。<br>――今しか存在しない。明日も明後日も、その時になったら、それは“今”だって。<br>だから、“今はしない”っていうのは、そういうこと」<br>
+     「あのね、エックハルト・トールって人が言ってたよ。『明日を見た人がいたら、記念碑が建つ』って。<br>『今しか存在しない』、明日も明後日も、その時になったら、それは“今”だって。<br>だから、“今はしない”っていうのは、そういうこと」<br>
      「えーっ、なんですかそれ。そんな訳のわからないこと言わないでくださいよ。そんなの、意味ないじゃないですか。なんでそんなプレゼントが欲しいんですか？」<br>
      「そんなに、まくしたてないでよ」<br>
      「だって…喜ばせておいて、それはないですよ」<br>
@@ -259,8 +259,7 @@
      「愛？」<br>
      「愛って、なに？」<br>
      「うわっ、またですか？」<br>
-     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね――<br>『愛は永遠に消えることはないんだ。
-ただ、新しいステージへと進化していくだけなんだよ。』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
+     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね――<br>『愛は永遠に消えることはないんだ。ただ、新しいステージへと進化していくだけなんだよ。』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
      「なんか、宇宙人っていうより、禅問答みたいになってきましたね。フツーになれませんか？」<br>
      「フツーじゃないのがいいって言ってなかったっけ…」<br>
      「言ったけど、今はフツーがいいと思いました」<br>
@@ -272,7 +271,7 @@
      「そうきましたか。はいはい、花園さんのおっしゃる通りです」<br>
      「じゃあ、大切な宝物として、心の金庫に保管しておきます」<br>
      「はーい。でもね、花園さん。スマホの仕組みを知らなくても、自然に使えるようになるでしょ？ 愛も、それと同じ。難しく考えなくていい。わからなくても、ちゃんと育っていくんですよ」<br><br>
-     …南海君、それは…確か…綿毛の子に関する伝承…<br>
+     南海君、それは…確か…綿毛の子に関する伝承…<br>
      “愛”を理解することは、未来永劫かなわぬ。<br>
      されど、“愛”は育つ。<br>
      …もしかして、君は…綿毛の子…？<br>
@@ -296,7 +295,7 @@
     綿毛が根付き、開花し、結実するまで、<br>
     決して、綿毛の子に接してはならぬ。<br>
     両者の波動が共鳴し、増幅すれば、<br>
-    やがて――消滅の危機を招くおそれがあるゆえに。</p>
+    やがて、消滅の危機を招くおそれがあるゆえに。</p>
   </div>
 </section>
 
@@ -320,13 +319,13 @@
       <p>「へぇ…愛は知らなくても育つんだ」<br>
      「そうです。…また、誘ってもいいですか？」<br><br>
      いいに決まってる。ホントは、何時でもOK…でも…ダメなの…。<br>“綿毛の子”が本当に存在するとは思ってもいなかった。<br>
-     しかも、それが南海君だなんて――あんまりだ。<br>
-     どうすればいいの？<br>
-     ああ…叫びたい。<br><br>
+     しかも、それが南海君だなんて…あんまりだ。<br>
+     どうすればいいの……<br>
+     ……。<br><br>
      「うん、でも…何年も先になっちゃうね」<br><br>
      発した言葉の余韻が、喉の奥で苦くにじむ。<br><br>
      「えっ、どうしてですか？」<br><br>
-     真実を話したら…消滅してしまう――。<br><br>
+     言えないよ、だって真実を話したら…<br><br>
      「内定を辞退して、放浪の旅に出ることにしたの」<br>
      「そんな…急に決めたんですか？」<br><br>
       そうだよ、たった今決めたの…<br>
@@ -442,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
