--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 思わず、のけぞってしまった。<br><br>
 「それって、オレの顔、見たくないって聞こえますよ」<br><br>
 この人は、どうしてこんなふうに振る舞えるんだろう。<br>
-でも、不思議と、居心地は悪くない。<br>
+でも、不思議と居心地は悪くない。<br>
 そう、まるで昔からの友人のように。<br>
 学部もクラブも違って、部室が隣なだけ。 会えば挨拶はするけれど、話したことなんて、ほとんどなかった。<br>
 それなのに、彼はわたしの空間に、抵抗なく溶け込んでくる。<br>
@@ -441,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
