--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
      「はぁ？ 誰でもってわけにはいきませんよ。」<br>
      「だよね？」<br>
      「もちろん」<br>
-     「じゃあね――キスする権利、ちょうだい」<br>
+     「じゃあね、”キスする権利” をちょうだい」<br>
      「わーぉ！ もちろんいいっすよ。誕生日前でも、もうあげちゃいます、その権利」<br>
      「ありがとう。大事にとっておくね」<br>
      「えっ、使わないんですか？ すぐ使っていいですよ」<br>
@@ -441,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
