--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
      「ガッカリだなぁ…去年の理系クラブ合同発表会で、『すいませーん、待ってくださーい』って、エレベーターに乗りこんだボクに声かけたの、覚えてませんか？」<br>
      「えっ？」<br>
      「まぁ、いいや。振り返ったら、発表資料を抱えた花園さんがニッコリ笑っていて、その背後に…たぶん花園さんの動線だと…なんとなく思ったんですけど、その“水の跡”っていうんですか、虹のような、すごくきれいな帯状のものが見えたんです」<br><br>
-     南海君…君は…、そんなことがあり得るだろうか。<br>
+     南海君… 君は…、そんなことがあり得るだろうか。<br>
      君は“紅の時代”の素を秘めている…でも理解していない。<br>
      そして、記録も、痕跡も、兆候も、何もない…<br>
      どうやって、どこから来たの…この“青の時代”に…。<br><br>
@@ -271,10 +271,10 @@
      「そうきましたか。はいはい、花園さんのおっしゃる通りです」<br>
      「じゃあ、大切な宝物として、心の金庫に保管しておきます」<br>
      「はーい。でもね、花園さん。スマホの仕組みを知らなくても、自然に使えるようになるでしょ？ 愛も、それと同じ。難しく考えなくていい。わからなくても、ちゃんと育っていくんですよ」<br><br>
-     南海君、それは…確か…綿毛の子に関する伝承…<br>
+     南海君、それは…確か…綿毛の子に関する伝承…<br><br>
      “愛”を理解することは、未来永劫かなわぬ。<br>
-     されど、“愛”は育つ。<br>
-     …もしかして、君は…綿毛の子…？<br>
+     されど、“愛”は育つ。<br><br>
+     もしかして、君は…綿毛の子…？<br>
       </p>
     </div>
     </div>
@@ -441,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
