--- a/index.html
+++ b/index.html
@@ -259,19 +259,19 @@
      「愛？」<br>
      「愛って、なに？」<br>
      「うわっ、またですか？」<br>
-     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね――<br>『愛は永遠に消えることはないんだ。ただ、新しいステージへと進化していくだけなんだよ。』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
+     「ふふっ、最近、AIにハマっててね。交互に一文ずつ加えて物語を作る遊びをしたの。最後にAIが締めくくったんだけど、それがね、<br>『愛は永遠に消えることはないんだ。ただ、新しいステージへと進化していくだけなんだよ。』って。<br>スゴイ！って思ったけど…“愛”って何？って考えたら、何がすごいのかも分からなくなっちゃって」<br>
      「なんか、宇宙人っていうより、禅問答みたいになってきましたね。フツーになれませんか？」<br>
      「フツーじゃないのがいいって言ってなかったっけ…」<br>
      「言ったけど、今はフツーがいいと思いました」<br>
      「この“権利”はね、特別な人からもらいたい権利なの」<br>
      「ボクは、特別な人？」<br>
-     「うん。特別な人が、特別な人にだけあげられるもので――特別な人からもらった時だけ嬉しいプレゼントなの。心の中に持っていると、幸せになれる。だから、使うのがもったいない。…これって、フツーでしょ？」<br>
+     「うん。特別な人が、特別な人にだけあげられるもので、別な人からもらった時だけ嬉しいプレゼントなの。心の中に持っていると、幸せになれる。だから、使うのがもったいない。…これって、フツーでしょ？」<br>
      「フツーは、喜んで使ったり、見せびらかしたりするもんですよ」<br>
      「もらった人の好きにさせてあげるのが、フツーじゃないの？」<br>
      「そうきましたか。はいはい、花園さんのおっしゃる通りです」<br>
      「じゃあ、大切な宝物として、心の金庫に保管しておきます」<br>
      「はーい。でもね、花園さん。スマホの仕組みを知らなくても、自然に使えるようになるでしょ？ 愛も、それと同じ。難しく考えなくていい。わからなくても、ちゃんと育っていくんですよ」<br><br>
-     南海君、それは…確か…綿毛の子に関する伝承…<br><br>
+     えっ…<br>南海君それは… 確か… 綿毛の子に関する伝承…<br><br>
      “愛”を理解することは、未来永劫かなわぬ。<br>
      されど、“愛”は育つ。<br><br>
      もしかして、君は…綿毛の子…？<br>
@@ -441,6 +441,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
