Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -320,9 +320,8 @@
      「そうです。…また、誘ってもいいですか？」<br><br>
      いいに決まってる。ホントは、何時でもOK…でも…ダメなの…。<br>“綿毛の子”が本当に存在するとは思ってもいなかった。<br>
      しかも、それが南海君だなんて…あんまりだ。<br>
-     どうすればいいの……<br>
-     ……。<br><br>
-     「うん、でも…何年も先になっちゃうね」<br><br>
+     どうすればいいの……<br><br>
+     「う、うん、でも…何年も先になっちゃうね」<br><br>
      発した言葉の余韻が、喉の奥で苦くにじむ。<br><br>
      「えっ、どうしてですか？」<br><br>
      言えないよ、だって真実を話したら…<br><br>
@@ -441,6 +440,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
