Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
      「う、うん、でも…何年も先になっちゃうね」<br><br>
      発した言葉の余韻が、喉の奥で苦くにじむ。<br><br>
      「えっ、どうしてですか？」<br><br>
-     言えないよ、だって真実を話したら…<br><br>
+     言えないよ… だって真実を話したら…<br><br>
      「内定を辞退して、放浪の旅に出ることにしたの」<br>
      「そんな…急に決めたんですか？」<br><br>
       そうだよ、たった今決めたの…<br>
@@ -440,6 +440,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
