Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
      「言ったけど、今はフツーがいいと思いました」<br>
      「この“権利”はね、特別な人からもらいたい権利なの」<br>
      「ボクは、特別な人？」<br>
-     「うん。特別な人が、特別な人にだけあげられるもので、別な人からもらった時だけ嬉しいプレゼントなの。心の中に持っていると、幸せになれる。だから、使うのがもったいない。…これって、フツーでしょ？」<br>
+     「うん。特別な人が、特別な人にだけあげられるもので、特別な人からもらった時だけ嬉しいプレゼントなの。心の中に持っていると、幸せになれる。だから、使うのがもったいない。…これって、フツーでしょ？」<br>
      「フツーは、喜んで使ったり、見せびらかしたりするもんですよ」<br>
      「もらった人の好きにさせてあげるのが、フツーじゃないの？」<br>
      「そうきましたか。はいはい、花園さんのおっしゃる通りです」<br>
@@ -440,6 +440,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
