Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -52,9 +52,23 @@
       <h2>――プロローグ：虚ろいても――</h2>
       <!-- <img src="images/prologue.png" alt="プロローグ画像" class="chapter-image"> -->
       <p>
-        どれほどの月日が流れたのだろう。<br>任務の全容が見えぬまま指令に従い、“青の時代（とき）”で、その時代（とき）の人として生きてきた。</p>
-        <p>いったい、私の任務は何だったのか。<br>戦場で友を失い号泣した。仲間と笑い転げたときもあった。<br>孤独にさいなまれた日々があり、命の危険を感じたこともある。<br>だが、今となっては、すべてが曖昧な残像でしかない。</p>
-        <p>もう、どうでもいい。</p><p>これから帰る“紅の時代(とき)”、遠くに霞む“青の時代”。<br>それらは本当に実在しているのか、<br>わたしは本当に生きているのか、<br>それさえも、今は確かではないのだから。</p><p>たぶん、突然届いた「任務終了」の通知が、一瞬にしてわたしのすべてを閉じてしまったのだ。</p><p>けれど不思議なことに、<br>何気ない一日のひとコマが、鮮やかによみがえることがある。</p><p>閉じられた空間からはみ出した記憶…<br>あの“綿毛の子”との会話もそのひとつだ。
+        どれほどの月日が流れたのだろう。<br>
+        任務の全容が見えぬまま、指令に従い、“青の時代（とき）”で、その時代（とき）の人として生きてきた。<br>
+        いったい、私の任務は何だったのか。<br>
+        戦場で友を失い、号泣した。<br>
+        仲間と笑い転げたときもあった。<br>
+        孤独にさいなまれた日々があり、命の危険を感じたこともある。<br>
+        だが今となっては、すべてが曖昧な残像でしかない。<br><br>
+        ――もう、どうでもいい。<br><br>
+        これから帰る“紅の時代（とき）”、遠くに霞む“青の時代”。<br>
+        れらは本当に実在しているのか。<br>
+        私は本当に生きているのか。<br>
+        それさえも、今は確かではないのだから。<br><br>
+        たぶん、突然届いた「任務終了」の通知が、一瞬にして私のすべてを閉じてしまったのだ。<br><br>
+        けれど不思議なことに、<br>
+        何気ない一日のひとコマが、今も鮮やかによみがえることがある。<br><br>
+        閉じられた空間から、こぼれ落ちた記憶――<br>
+        あの“綿毛の子”との会話も、そのひとつだ。<br>
       </p>
     </section>
 
@@ -440,6 +454,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
