--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         仲間と笑い転げたときもあった。<br>
         孤独にさいなまれた日々があり、命の危険を感じたこともある。<br>
         だが今となっては、すべてが曖昧な残像でしかない。<br><br>
-        ――もう、どうでもいい。<br><br>
+        もう、どうでもいい。<br><br>
         これから帰る“紅の時代（とき）”、遠くに霞む“青の時代”。<br>
         れらは本当に実在しているのか。<br>
         私は本当に生きているのか。<br>
@@ -454,6 +454,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
