--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
  <section class="notice-section">
   <div class="notice-box">
-    <h3>任務補足：<br>綿毛の子に関する伝承</h3>
+    <h3>任務補足<br>綿毛の子に関する伝承</h3>
     <p>青の時代に生きる者が“愛”を理解することは、未来永劫かなわぬ。<br>
     されど、“愛”は育つ。<br>
     この報告を受け、紅域の結界を維持するため、<br>
@@ -454,6 +454,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
