--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         あの“綿毛の子”との会話も、そのひとつだ。<br>
       </p>
     </section>
+    <p class="spin-off-note">
+  この作品は、短編小説『単独潜行領域』の世界から生まれたスピンオフ物語です。
+</p>
 
     <!-- 第1章 -->
 <section id="chapter1">
@@ -454,6 +457,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
