--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </p>
     </section>
     <p class="spin-off-note">
-  この作品は、短編小説『単独潜行領域』の世界から生まれたスピンオフ物語です。
+  この作品は、短編小説『単独潜行領域』から生まれたスピンオフ物語です。
 </p>
 
     <!-- 第1章 -->
@@ -457,6 +457,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
