Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>水の跡 ――意図せぬ出会いと別れ――</title>
 
-   <meta name="description" content="SF短編小説『青の時代』のスピンオフ">
+   <meta name="description" content="SF短編小説『単独潜行領域』から生まれたスピンオフ物語">
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -457,6 +457,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
