--- a/index.html
+++ b/index.html
@@ -452,11 +452,77 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
     (parseFloat(getComputedStyle(document.body).fontSize) - 1) + 'px';
 });
 </script>
+  <!-- 🔊 朗読ボタン（ページの上や下に設置してください） -->
+<button id="readButton" style="
+  background-color: #f0f0f0;
+  color: #333;
+  font-size: 16px;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 30px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  transition: 0.3s;
+">
+  🔊 朗読する
+</button>
+
+<!-- 🎵 ボタンのホバー効果 -->
+<script>
+const btn = document.getElementById("readButton");
+btn.addEventListener("mouseover", () => btn.style.backgroundColor = "#e8e8e8");
+btn.addEventListener("mouseout", () => btn.style.backgroundColor = "#f0f0f0");
+</script>
+
+<!-- 📖 ページ全体朗読スクリプト -->
+<script>
+let isSpeaking = false;
+
+document.getElementById("readButton").addEventListener("click", () => {
+  if (isSpeaking) {
+    // すでに朗読中なら停止
+    window.speechSynthesis.cancel();
+    isSpeaking = false;
+    btn.textContent = "🔊 朗読する";
+    return;
+  }
+
+  // ページ全体のテキストを取得（script, styleタグは除外）
+  const textNodes = Array.from(document.body.querySelectorAll("*"))
+    .filter(el => el.childNodes.length === 1 && el.childNodes[0].nodeType === Node.TEXT_NODE)
+    .map(el => el.textContent.trim())
+    .filter(t => t.length > 0)
+    .join("。");
+
+  const speech = new SpeechSynthesisUtterance(textNodes);
+  speech.lang = "ja-JP"; // 日本語
+  speech.rate = 1;       // 話す速さ（0.5〜2）
+  speech.pitch = 1;      // 声の高さ
+  speech.volume = 1;     // 音量（0〜1）
+
+  // 再生開始時
+  speech.onstart = () => {
+    isSpeaking = true;
+    btn.textContent = "⏹ 停止";
+  };
+
+  // 再生終了時
+  speech.onend = () => {
+    isSpeaking = false;
+    btn.textContent = "🔊 朗読する";
+  };
+
+  // 再生
+  window.speechSynthesis.speak(speech);
+});
+</script>
+
 
 
 </body>
 
 </html>
+
 
 
 
