--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
      「内定を辞退して、放浪の旅に出ることにしたの」<br>
      「そんな…急に決めたんですか？」<br><br>
       そうだよ、たった今決めたの…<br>
-      仕方ないでしょ、だって、あなたはたぶん…<br>
+      仕方ないでしょ、だって、君はたぶん…<br>
       ああ…もっと早く気づいていたら…<br>
       もしかしたら…<br>
       いや、そんなことはない。これは、運命。<br>
@@ -456,6 +456,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
