--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       仕方ないでしょ、だって、君はたぶん…<br>
       ああ…もっと早く気づいていたら…<br>
       もしかしたら…<br>
-      いや、そんなことはない。これは、任務…<br>
+      いや、そんなことはない。これは任務…<br>
       わたしたちは、すべての時代の均衡のため、<br>
       この“青の時代”に送り込まれたのだから。<br><br>
       「そうでもないよ。ずっと前から予定していたの」<br><br>
@@ -456,6 +456,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
