--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@
 私は軽くうなずいた。<br>
 言葉を探しているあいだ、コーヒーの湯気がふわりと立ちのぼっていくのを見つめていた。<br>
 ガラス窓の向こうでは、街路樹の葉が、ゆっくりと揺れている。<br><br>
-「なんか、花の香りがしませんか？」<br><br>
+「なんて言うんだっけ、雨の降り始めの、あの匂い」<br>
 突然、南海君が言った。<br>
+「えっ、ペトリコール？」<br>
+「そう、そう、なんかそれに似た香りがしませんか？」<br><br>       
 私は少し驚いて、彼の横顔を見た。<br>
 冗談かと思ったけれど、真面目な顔をしている。<br><br>
-「花？」<br>
-「たぶん… なんとなくですけど、変ですよね」<br>
-「ううん、変じゃないよ。香りがするって思えるの、いいね」<br><br>
+「そうかなぁ…」
+「うーん… なんとなくですけど、変ですよね」
+「そんなことないよ、香りがするって思えるの、いいね」<br><br>
 普段なら、こんな感覚的なやりとりに、真面目に返すことなんて、まずない。<br>
 だけど、今の私は、それを否定したくなかった。<br>
 風が吹き、カップの湯気がすっと横に流れる。<br>
@@ -135,7 +137,7 @@
 これは、ただの偶然だろうか。<br>
 この香りに、南海君は気づいている…？<br>
 いや、そんなはずはない。<br>
-誰かの香水が、たまたま彼のもとに漂ってきただけだ。<br>
+ウッディ系コーヒーの香りが、彼のもとに漂ってきただけだ。<br>
 “紅の時代”の人でなければ、この香りに気づくはずがないのだから。<br>
 心のどこかが、小さく波立った。<br>
 もしかして…<br>
@@ -231,7 +233,10 @@
      「それとは違いますよ。その目は…何か企んでる目です」<br>
      「わたしね、人には見えないものが見えるの」<br>
      「うわっ、出た宇宙人！ で、何が見えるんですか？」<br>
-     「ほら、南海君も見たこと、絶対あるでしょ。カタツムリが通った“水の跡”。光の加減で見えたり見えなかったり。きれいに思えるときもあれば、なんだかイヤだなって感じるときもある」<br>
+     「あのね、“水の跡”」<br>
+     「水の跡？」<br>
+　　　「うん、光加減で見えたり見えなかったりするんだけど、清々しい気分の時は虹のように見えて、<br>
+      気分が落ち込んでる時はカタツムリの通った跡みたいに見えるからそう呼んでるの」<br>
      「はぁ…」<br>
      「南海君ってモテるから…」<br>
      「何ですか、急に。いやー、それほどでもないですよ」<br>
@@ -456,6 +461,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
