--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 私は軽くうなずいた。<br>
 言葉を探しているあいだ、コーヒーの湯気がふわりと立ちのぼっていくのを見つめていた。<br>
 ガラス窓の向こうでは、街路樹の葉が、ゆっくりと揺れている。<br><br>
-「なんて言うんだっけ、雨の降り始めの、あの匂い」<br>
-突然、南海君が言った。<br>
+「なんて言うんだっけ、雨の降り始めの、あの匂い」<br><br> 
+突然、南海君が言った。<br><br> 
 「えっ、ペトリコール？」<br>
 「そう、そう、なんかそれに似た香りがしませんか？」<br><br>       
 私は少し驚いて、彼の横顔を見た。<br>
@@ -461,6 +461,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
