--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 「そう、そう、なんかそれに似た香りがしませんか？」<br><br>       
 私は少し驚いて、彼の横顔を見た。<br>
 冗談かと思ったけれど、真面目な顔をしている。<br><br>
-「そうかなぁ…」
-「うーん… なんとなくですけど、変ですよね」
+「そうかなぁ…」<br>
+「うーん… なんとなくですけど、変ですよね」<br>
 「そんなことないよ、香りがするって思えるの、いいね」<br><br>
 普段なら、こんな感覚的なやりとりに、真面目に返すことなんて、まずない。<br>
 だけど、今の私は、それを否定したくなかった。<br>
@@ -461,6 +461,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
