--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
      「わたしね、人には見えないものが見えるの」<br>
      「うわっ、出た宇宙人！ で、何が見えるんですか？」<br>
      「あのね、“水の跡”」<br>
-     「水の跡？」<br>「うん、光加減で見えたり見えなかったりするんだけど、清々しい気分の時は虹のように見えて、<br>気分が落ち込んでる時はカタツムリの通った跡みたいに見えるからそう呼んでるの」<br>
+     「水の跡？」<br>「うん、光加減で見えたり見えなかったりするんだけど、清々しい気分の時は虹のように見えて、気分が落ち込んでる時はカタツムリの通った跡みたいに見えるからそう呼んでるの」<br>
      「はぁ…」<br>
      「南海君ってモテるから…」<br>
      「何ですか、急に。いやー、それほどでもないですよ」<br>
@@ -459,6 +459,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
