--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
      「えっ、失礼ねぇ。これは生まれつきの顔なの。ごめん、今思い出した」<br>
      「いいですよ。あのあと何度か話しかけようとしたけど、花園さんがボクを視界に入れてくれないから、後ろから声かけちゃえって。それでコーヒーに誘ったらすぐにOKしてくれたから、覚えていてくれたのかと思ったんだけど…」<br>
      「ホントにゴメン！ わたし不器用なの。それで…なんか周りが見えてないみたいで…」<br><br>
-     波動の共鳴が大きくなる前に、ここを離れなければ…<br><br>
+     波動が激しくなる前に、ここを離れなければ…<br><br>
      「了解。で、差し上げた権利のことなんですが、今はないとして、必ず行使してくださいね」<br>
      「あのね、エックハルト・トールって人が言ってたよ。『明日を見た人がいたら、記念碑が建つ』って。<br>『今しか存在しない』、明日も明後日も、その時になったら、それは“今”だって。<br>だから、“今はしない”っていうのは、そういうこと」<br>
      「えーっ、なんですかそれ。そんな訳のわからないこと言わないでくださいよ。そんなの、意味ないじゃないですか。なんでそんなプレゼントが欲しいんですか？」<br>
@@ -459,6 +459,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
