--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 これは、ただの偶然だろうか。<br>
 この香りに、南海君は気づいている…？<br>
 いや、そんなはずはない。<br>
-ウッディ系コーヒーの香りが、彼のもとに漂ってきただけだ。<br>
+たぶん、ウッディ系コーヒーの香りが漂ってきただけだ。<br>
 “紅の時代”の人でなければ、この香りに気づくはずがないのだから。<br>
 心のどこかが、小さく波立った。<br>
 もしかして…<br>
@@ -459,6 +459,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
