Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 突然、南海君が言った。<br><br> 
 「えっ、ペトリコール？」<br>
 「そう、そう、なんかそれに似た香りがしませんか？」<br><br>       
-私は少し驚いて、彼の横顔を見た。<br>
+私は少し驚いて彼を見た。<br>
 冗談かと思ったけれど、真面目な顔をしている。<br><br>
 「そうかなぁ…」<br>
 「うーん… なんとなくですけど、変ですよね」<br>
@@ -459,6 +459,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
