Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 でも、この会話がずっと続けばいいと心のどこかで思い始めていた。<br>
 すべてを投げ出して、ただ、たわいもない会話を楽しみたい。<br><br>
 カップを置く音が、静かに重なった。<br><br>
-「ここのブレンド、好きだな。酸味があって、スッキリするんですよ」<br>
+「ここのブレンド、好きだな。酸味があってスッキリするんですよ」<br>
 私は軽くうなずいた。<br>
 言葉を探しているあいだ、コーヒーの湯気がふわりと立ちのぼっていくのを見つめていた。<br>
 ガラス窓の向こうでは、街路樹の葉が、ゆっくりと揺れている。<br><br>
@@ -458,6 +458,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
