--- a/index.html
+++ b/index.html
@@ -388,6 +388,10 @@
   『好きだよ』―この物語のためのイメージソング―<br>
   <a href="https://www.youtube.com/watch?v=Q9W_rx4-m2g&t=1s" target="_blank" style="color:#4b0082; text-decoration:none;">YouTubeで聴く</a>
 </p>
+<p style="text-align:center; font-size:0.9rem; color:#666; margin-top:2rem;">
+  『The Water’s Trace』―この物語の英語バージョン―<br>
+  <a href="https://yoikonoyo.github.io/waters-trace/" target="_blank" style="color:#4b0082; text-decoration:none;">英語版を読む</a>
+</p>  
 
   <div class="qr-section">
   <p>スマホでサイトや曲をすぐにチェックできます↓</p>
@@ -458,6 +462,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
