--- a/index.html
+++ b/index.html
@@ -404,6 +404,10 @@
       <img src="images/song-qr.png" alt="好きだよQRコード">
       <p>イメージソング『好きだよ』</p>
     </div>
+    <div class="qr-item">
+      <img src="images/en-story-qr.png" alt="『The Water’s Trace』QRコード">
+      <p>『The Water’s Trace』</p>
+    </div>
   </div>
 </div>
 
@@ -462,6 +466,7 @@ document.querySelector('.decrease-font').addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
